# digital-institute

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 66788553b35c_create_users_table.py
docs/02-architecture/decisions/: ADR-001-modular-monolith-over-microservices.md  ADR-002-row-level-multitenancy-over-schema-per-tenant.md  ADR-003-python-as-primary-language.md  ADR-004-fastapi-as-api-framework.md  ADR-005-pydantic-for-validation-and-schemas.md  ADR-006-stateless-jwt-over-server-side-session.md  ADR-007-argon2-for-password-hashing.md  ADR-008-postgresql-as-primary-database.md  ADR-009-sqlalchemy2-with-orm-and-core.md  ADR-010-alembic-for-schema-migrations.md  ADR-011-postgres-fts-over-dedicated-search-engine.md  ADR-012-pgvector-for-embeddings-over-dedicated-vector-db.md  ADR-013-redis-for-caching-rate-limiting-and-distributed-locking.md  ADR-014-celery-plus-rabbitmq-for-background-jobs.md  ADR-015-outbox-pattern-for-reliable-event-delivery.md  ADR-016-rbac-with-predefined-roles-over-abac.md  ADR-017-oidc-sso-integration-strategy.md  ADR-018-aws-ses-as-email-provider.md  ADR-019-stripe-as-payment-provider.md  ADR-020-s3-for-file-storage-with-presigned-urls.md  ADR-021-hmac-signed-webhooks-for-outbound-events.md  ADR-022-opentelemetry-as-instrumentation-standard.md  ADR-023-consumer-driven-contracts-with-pact.md  ADR-024-idempotency-key-pattern-for-critical-operations.md  ADR-025-per-organization-feature-flags-over-global-flags.md  ADR-026-github-actions-for-ci-cd.md  ADR-027-helm-for-kubernetes-packaging.md  ADR-028-terraform-for-aws-infrastructure-provisioning.md  ADR-029-airflow-over-custom-scripts-for-etl-orchestration.md
docs/06-development/: DECISIONS.md
requirements/: base.in  base.txt  dev.in  dev.txt
src/institute/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  tasks.py  worker.py
src/institute/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
src/institute/modules/health/: router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_database.py  test_dependencies.py
tests/unit/: test_auth_service.py  test_health_service.py  test_tasks.py
