[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digital-institute"
version = "0.1.0"
description = "The Institute's digital headquarters: courses, enrollment, certificates, donations, and complete operations."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Vinicius Alves Leon Rodriguez", email = "vinileon321@gmail.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["src/institute"]

# =============================================================================
# RUFF — linter e formatter
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (prohibits printing in production.)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — Black will take care of that.
    "S101", # allow assert in tests
    "B008", # allow function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "T20"]

[tool.black]
line-length = 88
target-version = ["py312"]

# =============================================================================
# MYPY — type checker
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "stripe.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (requires DB, Redis, RabbitMQ)",
    "contract: pact contract tests",
    "slow: tests that take more than 1 second",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/alembic/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 80
